# grimoire

./: CHANGELOG.md  Cargo.toml  Grimoire.toml  LICENSE-APACHE  README.md  _typos.toml  cliff.toml  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_feature.yml
.github/workflows/: lint.yml  release.yml
scripts/: test_grim.js  test_grim.py  test_grim.rs  test_grim.sh
src/: cli.rs  config.rs  executor.rs  lib.rs  main.rs
