[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT or Apache 2.0"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
description = "A modern grimoire for developers—define sigils, cast workflows, automate anything."
homepage = "https://github.com/Vaishnav-Sabari-Girish/grimoire"
repository = "https://github.com/Vaishnav-Sabari-Girish/grimoire"
keywords = ["cli", "tui", "task"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
