[package]
name = "grim"
version = "0.4.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
description = "A modern grimoire for developers—define sigils, cast workflows, automate anything."
homepage = "https://github.com/Vaishnav-Sabari-Girish/grimoire"
repository = "https://github.com/Vaishnav-Sabari-Girish/grimoire"
keywords = ["cli", "tui", "task"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[profile.dist]
inherits = "release"
lto = "thin"
